Add footer section with sponsorship details
Added footer section to index.html for sponsorship information.

--- a/index.html
+++ b/index.html
@@ -232,3 +232,17 @@ body {
 </div>
 </body>
 </html>
+<!-- ✅ Footer Section -->
+<footer style="
+    background-color:#111;
+    color:white;
+    text-align:center;
+    padding:20px;
+    margin-top:40px;
+    font-size:1.2em;
+    font-weight:bold;
+">
+    Sponsored by FuryTV
+</footer>
+
+
