--- a/index.html
+++ b/index.html
@@ -188,13 +188,15 @@ body {
     <tr><td>Cat 3</td><td><span style="color:red; font-weight:bold; text-transform:uppercase;">SOLD OUT</span></td></tr>
 
   </table>
-  <a href="https://wa.me/525533325564" class="buy-btn" target="_blank">Buy Tickets</a>
+  <a href="https://wa.me/14084122142" class="buy-btn" target="_blank">Buy Tickets</a>
 </div>
 
 <!-- Knockout round (no logos yet) -->
 <div class="ticket-section">
-  <div class="match-title" style="color: green; font-weight:bold; text-align:center;">
-ROUND OF 32 (1A vs 3CEFHI)
+  <div class="match-title" style="color: rgb(12, 121, 245); display:flex; align-items:center; gap:15px; font-weight:bold;">
+    <img src="26MEX logo.png" alt="USA Logo" style="height:40px; width:auto;">
+    <span>1A vs 3CEFHI -ROUND OF 32</span>
+    <img src="26MEX logo.png" alt="Paraguay Logo" style="height:40px; width:auto;">
   </div>
 
 <div class="venue-info">
@@ -221,8 +223,10 @@ ROUND OF 32 (1A vs 3CEFHI)
 </div>
 
 <div class="ticket-section">
-  <div class="match-title" style="color: green; font-weight:bold; text-align:center;">
-    M92 – ROUND OF 16
+  <div class="match-title" style="color: rgb(12, 121, 245); display:flex; align-items:center; gap:15px; font-weight:bold;">
+    <img src="26MEX logo.png" alt="USA Logo" style="height:40px; width:auto;">
+    <span>W79 vs W80 -ROUND OF 16</span>
+    <img src="26MEX logo.png" alt="Paraguay Logo" style="height:40px; width:auto;">
   </div>
   <div class="venue-info">
   <span style="
@@ -235,7 +239,7 @@ ROUND OF 32 (1A vs 3CEFHI)
     border-radius:4px;">
     M92
   </span>
-  📍 Venue: [Insert Venue Here]
+  📍 Venue: Estadio Banorte, Mexico City
   <div style="color:rgb(6, 97, 150); font-weight:normal; margin-top:4px;">
     🗓️ July 5, 2026 ⏰ 18:00
   </div>
@@ -309,6 +313,35 @@ ROUND OF 32 (1A vs 3CEFHI)
   <a href="https://wa.me/14084122142" class="buy-btn" target="_blank">Buy Tickets</a>
 </div>
 
+<div class="ticket-section">
+  <div class="match-title" style="color: rgb(12, 121, 245); display:flex; align-items:center; gap:15px; font-weight:bold;">
+    <img src="usa-logo.png" alt="USA Logo" style="height:40px; width:auto;">
+    <span>USA vs AUSTRALIA</span>
+    <img src="aus logo.png" alt="Australia Logo" style="height:40px; width:auto;">
+  </div>
+<div class="venue-info">
+  <span style="
+    display:inline-block;
+    background-color:black;
+    color:white;
+    font-weight:bold;
+    font-size:22px;     /* Bigger text */
+    padding:6px 12px;   /* Space around text */
+    border-radius:4px;">
+    M32
+  </span>
+  📍 Venue: Lumen Field, Seattle
+</div>
+<div style="color:rgb(6, 97, 150); font-weight:normal; margin-top:4px;">
+  🗓️ June 19, 2026 ⏰ 13:00
+</div>
+
+  <table class="ticket-table">
+    <tr><th>Category</th><th>Price (USD)</th></tr>
+    <tr><td>Cat 1</td><td>$2,350 USD</td></tr>
+  </table>
+  <a href="https://wa.me/14084122142" class="buy-btn" target="_blank">Buy Tickets</a>
+</div>
 <div class="ticket-section">
   <div class="match-title" style="color: rgb(47, 169, 235); display:flex; align-items:center; gap:15px; font-weight:bold;">
     <img src="argentina-logo.png" alt="Argentina Logo" style="height:40px; width:auto;">
