--- a/index.html
+++ b/index.html
@@ -84,13 +84,72 @@ body {
     .buy-btn:hover {
       background: #004d33;
     }
+
+  .old-price {
+  color: #888;
+  text-decoration: line-through;
+  margin-right: 8px;
+}
+
+.new-price {
+  color: #0f7a2d;
+  font-weight: 700;
+}
+
+.flashing-header {
+  font-size: 2.2em;
+  font-weight: 800;
+  background: #f1f3f2;
+  color: #ff0000;
+  display: inline-block;
+  padding: 20px 60px;
+  border-radius: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  animation: flash 3s infinite; /* key animation */
+}
+
+@keyframes flash {
+  25%, 50%, 100% { opacity: 1; }
+  25%, 75% { opacity: 0; }
+}
+.discount-box {
+  display: inline-block;
+  background-color: #d60000; /* bright red */
+  color: #fff;              /* white text */
+  font-weight: 600;
+  padding: 6px 12px;
+  border-radius: 4px;       /* square with slight rounding */
+  text-transform: uppercase;
+  font-size: 0.85rem;
+}
   </style>
 </head>
 <body>
 
-<h1 style="text-align:center; font-size:3em; background:rgb(5, 171, 68); color:white; display:inline-block; padding:20px 40px; border-radius:10px;">
-    🎟️ FIFA WORLD CUP 2026 – TICKET SALES
+<h1 style="
+  text-align:center;
+  font-size:1.5em;
+  background:rgb(5, 171, 68);
+  color:white;
+  display:inline-flex;
+  align-items:center;
+  gap:15px;
+  padding:20px 40px;
+  border-radius:10px;
+">
+  <img src="fifa-logo.png" alt="FIFA Logo" style="height:40px;">
+  FIFA WORLD CUP 2026  FURY TICKET SALES
+  <img src="fifa-logo.png" alt="FIFA Logo" style="height:40px;">
 </h1>
+
+<div style="text-align:center;">
+  <h1 class="flashing-header">
+    🎅🎁✨ OFERTAS NAVIDEÑAS 🎄❄️🎀
+  </h1>
+</div>
+
 
 <div class="ticket-sectionMEX">
   <!-- M1 already fixed with logos -->
@@ -149,11 +208,12 @@ body {
   </div>
 </div>
   <table class="ticket-table">
-    <tr><th>Category</th><th>Price (USD)</th></tr>
-    <tr><td>Cat 1</td><td class="none">$3,200 USD</td></tr>
-    <tr><td>Cat 2</td><td>$2,700 USD</td></tr>
-    <tr><td>Cat 3</td><td>$2,400 USD</td></tr>
-    <tr><td>Cat 4</td><td>$2,200 USD</td></tr>
+    <tr><th>Category</th><th>Price (USD)</th><th></th></tr>
+    <tr><td>Cat 1</td><td><span class="old-price">$3,300 USD</span><span class="new-price">$3,000 USD</span></td>
+    <td><span class="discount-box">Special discount</span></td></tr>
+    <tr><td>Cat 2</td><td>$2,700 USD</td><td></td></tr>
+    <tr><td>Cat 3</td><td>$2,400 USD</td><td></td></tr>
+    <tr><td>Cat 4</td><td>$2,200 USD</td><td></td></tr>
   </table>
   <a href="https://wa.me/525533325564" class="buy-btn" target="_blank">Buy Tickets</a>
 </div>
@@ -182,8 +242,9 @@ body {
   </div>
 </div>
   <table class="ticket-table">
-    <tr><th>Category</th><th>Price (USD)</th></tr>
-    <tr><td>Cat 1</td><td class="none">$3,300 USD</td></tr>
+    <tr><th>Category</th><th>Price (USD)</th></tr></th></tr>
+    <tr><td>Cat 1</td><td><span class="old-price">$3,300 USD</span><span class="new-price">$3,100 USD</span></td>
+    <td><span class="discount-box">Special discount</span></td></tr>
     <tr><td>Cat 2</td><td>$2,600 USD</td></tr>
     <tr><td>Cat 3</td><td><span style="color:red; font-weight:bold; text-transform:uppercase;">SOLD OUT</span></td></tr>
 
@@ -216,7 +277,8 @@ body {
   </div>
 </div>
   <table class="ticket-table">
-    <tr><th>Category</th><th>Price (USD)</th></tr>
+    <tr><td>Hospitality</td><td><span class="old-price">$4,500 USD</span><span class="new-price">$4,100 USD</span></td>
+    <td><span class="discount-box">Special discount</span></td></tr>
     <tr><td>Cat 1</td><td>$2,300 USD</td></tr>
   </table>
   <a href="https://wa.me/14084122142" class="buy-btn" target="_blank">Buy Tickets</a>
@@ -245,7 +307,7 @@ body {
   </div>
 </div>
   <table class="ticket-table">
-    <tr><th>Category</th><th>Price (USD)</th></tr>
+     <tr><th>Category</th><th>Price (USD)</th></tr></th></tr>
     <tr><td>Cat 1</td><td>$3,400 USD</td></tr>
     <tr><td>Cat 2</td><td>$2,500 USD</td></tr>
     <tr><td>Cat 3</td><td>$2,200 USD</td></tr>
@@ -284,34 +346,7 @@ body {
   <a href="https://wa.me/14084122142" class="buy-btn" target="_blank">Buy Tickets</a>
 </div>
 
-<div class="ticket-section">
-  <div class="match-title" style="color: green; display:flex; align-items:center; gap:15px; font-weight:bold;">
-    <img src="uzbekistan-logo.png" alt="Uzbekistan Logo" style="height:40px; width:auto;">
-    <span>UZBEKISTAN vs COLOMBIA</span>
-    <img src="colombia-logo.png" alt="Colombia Logo" style="height:40px; width:auto;">
-  </div>
-  <div class="venue-info">
-  <span style="
-    display:inline-block;
-    background-color:black;
-    color:white;
-    font-weight:bold;
-    font-size:22px;
-    padding:6px 12px;
-    border-radius:4px;">
-    M24
-  </span>
-  📍 Venue: Estadio Banorte, Mexico City  
-  <div style="color:rgb(6, 97, 150); font-weight:normal; margin-top:4px;">
-    🗓️ June 17, 2026 ⏰ 20:00
-  </div>
-</div>
-  <table class="ticket-table">
-    <tr><th>Category</th><th>Price (USD)</th></tr>
-    <tr><td>Cat 1</td><td><span style="color:red; font-weight:bold; text-transform:uppercase;">SOLD OUT</span></td></tr>
-  </table>
-  <a href="https://wa.me/14084122142" class="buy-btn" target="_blank">Buy Tickets</a>
-</div>
+
 
 <div class="ticket-section">
   <div class="match-title" style="color: rgb(12, 121, 245); display:flex; align-items:center; gap:15px; font-weight:bold;">
@@ -423,8 +458,9 @@ body {
   </div>
 </div>
   <table class="ticket-table">
-    <tr><th>Category</th><th>Price (USD)</th></tr>
-    <tr><td>Cat 3</td><td>$1,450 USD</td></tr>
+    <tr><th>Category</th><th>Price (USD)</th><th></th></tr>
+    <tr><td>Cat 3</td><td><span class="old-price">$1,450 USD</span><span class="new-price">$1,200 USD</span></td>
+    <td><span class="discount-box">Special discount</span></td></tr>
   </table>
   <a href="https://wa.me/14084122142" class="buy-btn" target="_blank">Buy Tickets</a>
 </div>
@@ -486,6 +522,35 @@ body {
   </table>
   <a href="https://wa.me/14084122142" class="buy-btn" target="_blank">Buy Tickets</a>
 </div>
+
+<div class="ticket-section">
+  <div class="match-title" style="color: green; display:flex; align-items:center; gap:15px; font-weight:bold;">
+    <img src="uzbekistan-logo.png" alt="Uzbekistan Logo" style="height:40px; width:auto;">
+    <span>UZBEKISTAN vs COLOMBIA</span>
+    <img src="colombia-logo.png" alt="Colombia Logo" style="height:40px; width:auto;">
+  </div>
+  <div class="venue-info">
+  <span style="
+    display:inline-block;
+    background-color:black;
+    color:white;
+    font-weight:bold;
+    font-size:22px;
+    padding:6px 12px;
+    border-radius:4px;">
+    M24
+  </span>
+  📍 Venue: Estadio Banorte, Mexico City  
+  <div style="color:rgb(6, 97, 150); font-weight:normal; margin-top:4px;">
+    🗓️ June 17, 2026 ⏰ 20:00
+  </div>
+</div>
+  <table class="ticket-table">
+    <tr><th>Category</th><th>Price (USD)</th></tr>
+    <tr><td>Cat 1</td><td><span style="color:red; font-weight:bold; text-transform:uppercase;">SOLD OUT</span></td></tr>
+  </table>
+  <a href="https://wa.me/14084122142" class="buy-btn" target="_blank">Buy Tickets</a>
+</div>
   </div>
   <div
 </body>
@@ -504,6 +569,7 @@ body {
          style="height:40px; width:auto; vertical-align:middle; margin-right:10px;">
     Sponsored by FuryTV
 </footer>
+
 
 
 
