--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ function closeMapModal() {
     <!-- Stadium icon on the right, with dynamic map -->
     <img src="stadium.png" alt="Stadium Map"
          style="height:50px; cursor:pointer;"
-         onclick="openMapModal('Akron-map.jpg')">
+         onclick="openMapModal('akron-map.jpg')">
   </div>
 </div>
 
@@ -645,6 +645,7 @@ function closeMapModal() {
          style="height:40px; width:auto; vertical-align:middle; margin-right:10px;">
     Sponsored by FuryTV
 </footer>
+
 
 
 
