--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ function closeMapModal() {
 
   <table class="ticket-table">
     <tr><th>Category</th><th>Price (USD)</th><th></th></tr>
-    <tr><td>Cat 1</td><td><span class="old-price">$3,500 USD</span><span class="new-price">$3,100 USD</span></td>
+    <tr><td>Cat 1</td><td><span class="soldout-box" style="color:rgb(249, 249, 249); font-weight:bold; text-transform:uppercase;">ON HOLD</span></td></tr>
     <td><span class="discount-box">Special discount</span></td></tr>
     <tr><td>Cat 2</td><td>$2,700 USD</td><td></td></tr>
     <tr><td>Cat 3</td><td>$2,400 USD</td><td></td></tr>
@@ -793,6 +793,7 @@ function closeMapModal() {
          style="height:40px; width:auto; vertical-align:middle; margin-right:10px;">
     Sponsored by FuryTV
 </footer>
+
 
 
 
