--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ function closeMapModal() {
 
   <table class="ticket-table">
     <tr><th>Category</th><th>Price (USD)</th></tr>
-    <tr><td>Cat 1</td><td class="none">$5,900 USD</td></tr>
+    <tr><td>Cat 1</td><td class="none">$6,500 USD</td></tr>
     <tr><td>Cat 2</td><td><span class="new-price">$5,000 USD</span></td>
     <td><span class="payment-box">Payment Plan</span></td></tr>
   </table>
@@ -313,8 +313,7 @@ function closeMapModal() {
 
   <table class="ticket-table">
     <tr><th>Category</th><th>Price (USD)</th><th></th></tr>
-    <tr><td>Cat 1</td><td><span class="old-price">$3,500 USD</span><span class="new-price">$3,100 USD</span></td>
-    <td><span class="discount-box">ON HOLD</span></td></tr>
+    <tr><td>Cat 1</td><td><span class="soldout-box" style="color:rgb(249, 249, 249); font-weight:bold; text-transform:uppercase;">SOLD OUT</span></td></tr>
     <tr><td>Cat 2</td><td>$2,700 USD</td><td></td></tr>
     <tr><td>Cat 3</td><td>$2,400 USD</td><td></td></tr>
     <tr><td>Cat 4</td><td>$2,200 USD</td><td></td></tr>
@@ -793,7 +792,6 @@ function closeMapModal() {
          style="height:40px; width:auto; vertical-align:middle; margin-right:10px;">
     Sponsored by FuryTV
 </footer>
-
 
 
 
