--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ function closeMapModal() {
 </div>
   <table class="ticket-table">
     <tr><th>Category</th><th>Price (USD)</th></tr>
-   <tr><td>Cat 1</td><td><span class="old-price">$3,500 USD</span><span class="new-price">$3,000 USD</span></td
+   <tr><td>Cat 1</td><td><span class="old-price">$3,500 USD</span><span class="new-price">$3,000 USD</span></tr
     <tr><td>Cat 2</td><td>$2,600 USD</td></tr>
     <tr><td>Cat 3</td><td><span class="soldout-box" style="color:rgb(249, 249, 249); font-weight:bold; text-transform:uppercase;">SOLD OUT</span></td></tr>
 
@@ -937,6 +937,7 @@ function closeMapModal() {
          style="height:40px; width:auto; vertical-align:middle; margin-right:10px;">
     Sponsored by FuryTV
 </footer>
+
 
 
 
