--- a/index.html
+++ b/index.html
@@ -776,7 +776,7 @@ function applyFilters() {
 
   <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:6px;">
     <span>Category 2</span>
-    <span style="font-weight:bold; color:#ffc371;">$5,000 USD</span>
+    <span style="font-weight:bold; color:#ffc371;">$100,000 MXN</span>
   </div>
 
   <!-- Payment Plan -->
@@ -1052,4 +1052,5 @@ function applyFilters() {
 
 </body>
 </html>
+
 
