--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@ function applyFilters() {
 
   </span>
 
-
+</div>
 
   <!-- WhatsApp + Stadium Map -->
   <div style="display:flex; justify-content:space-between; align-items:center; margin-top:14px;">
@@ -1146,6 +1146,7 @@ function applyFilters() {
 
 </body>
 </html>
+
 
 
 
