--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>FURY SHOP</title>
+  <title>FURY TICKETS</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/png" href="fury-icon.png" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+</head>
+
 
   <!-- Fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,12 +15,12 @@
 
     <!-- HEADER -->
   <header>
-    <img src="fifa-logo.png" alt="Logo Izquierdo" class="logo">
+    <img src="fury-icon.png" alt="Logo Izquierdo" class="logo">
     <div class="brand-block">
       <h1>WORLD CUP 2026</h1>
       <p>FURY TICKETS</p>
     </div>
-    <img src="fifa-logo.png" alt="Logo Derecho" class="logo">
+    <img src="fury-icon.png" alt="Logo Derecho" class="logo">
   </header>
 
   <div id="opening-game-timer" class="countdown-box">
@@ -799,8 +803,8 @@ function applyFilters() {
     </span>
 
   </span>
-
 </div>
+
 
   <!-- WhatsApp + Stadium Map -->
   <div style="display:flex; justify-content:space-between; align-items:center; margin-top:14px;">
@@ -1146,8 +1150,6 @@ function applyFilters() {
 
 </body>
 </html>
-
-
 
 
 
