--- a/index.html
+++ b/index.html
@@ -69,16 +69,51 @@
 
   <li>🧾 <strong>Comprobante digital</strong> después del pago inicial, con toda la información de tus boletos.</li>
 
-  <li>🎟️ <strong>Asignación de boletos garantizada</strong> una vez completado el plan, con opción de elegir categoría y zona.</li>
+  <li>🎟️ <strong>Asignación de boletos garantizada</strong> una vez completado el plan, con opción de elegir categoría.</li>
+<li><strong>Plan de Pago:</strong><br>
 
-<li>📅 Plan de Pago:<strong><br>
-    📅Inicio: <span style="color:#51ff8e;">25%</span><br>
-    📅Mes 1: <span style="color:#51ff8e;">15%</span><br>
-    📅Mes 2: <span style="color:#51ff8e;">15%</span><br>
-    📅Mes 3: <span style="color:#51ff8e;">15%</span><br>
-    📅Mes 4: <span style="color:#51ff8e;">15%</span><br>
-    📅Mes 5: <span style="color:#51ff8e;">15%</span><br>
-    Total: <span style="color:#51ff8e;">100%</span>
+  🚀 Enganche: <span style="color:#51ff8e;">25%</span><br>
+  <!-- 25% -->
+  <div style="width:100%; background:#e5e5e5; border-radius:8px; margin:4px 0;">
+    <div style="width:25%; background:#51ff8e; height:10px; border-radius:8px;"></div>
+  </div>
+
+  📅 Enero 2026: <span style="color:#51ff8e;">15%</span><br>
+  <!-- 25% + 15% = 40% -->
+  <div style="width:100%; background:#e5e5e5; border-radius:8px; margin:4px 0;">
+    <div style="width:40%; background:#51ff8e; height:10px; border-radius:8px;"></div>
+  </div>
+
+  📅 Febrero 2026: <span style="color:#51ff8e;">15%</span><br>
+  <!-- 40% + 15% = 55% -->
+  <div style="width:100%; background:#e5e5e5; border-radius:8px; margin:4px 0;">
+    <div style="width:55%; background:#51ff8e; height:10px; border-radius:8px;"></div>
+  </div>
+
+  📅 Marzo 2026: <span style="color:#51ff8e;">15%</span><br>
+  <!-- 55% + 15% = 70% -->
+  <div style="width:100%; background:#e5e5e5; border-radius:8px; margin:4px 0;">
+    <div style="width:70%; background:#51ff8e; height:10px; border-radius:8px;"></div>
+  </div>
+
+  📅 Abril 2026: <span style="color:#51ff8e;">15%</span><br>
+  <!-- 70% + 15% = 85% -->
+  <div style="width:100%; background:#e5e5e5; border-radius:8px; margin:4px 0;">
+    <div style="width:85%; background:#51ff8e; height:10px; border-radius:8px;"></div>
+  </div>
+
+  📅 Mayo 2026: <span style="color:#51ff8e;">15%</span><br>
+  <!-- 85% + 15% = 100% -->
+  <div style="width:100%; background:#e5e5e5; border-radius:8px; margin:4px 0;">
+    <div style="width:100%; background:#51ff8e; height:10px; border-radius:8px;"></div>
+  </div>
+
+  🏁 Total: <span style="color:#51ff8e;">100%</span><br>
+  <!-- 100% final -->
+  <div style="width:100%; background:#e5e5e5; border-radius:8px; margin:4px 0;">
+    <div style="width:100%; background:#51ff8e; height:10px; border-radius:8px;"></div>
+  </div>
+
 
 <li>🏁 <strong> Transferencia de boleto al finalizar el plan y cubrir el monto total</strong>, sin cargos ocultos ni costos adicionales.</li>
 </li>
@@ -550,6 +585,15 @@
   font-weight: 600;
 }
 
+
+     .golden-box {
+  display: inline-block;
+  background: #d4af37;
+  color: #000;
+  padding: 4px 10px;
+  border-radius: 6px;
+  font-weight: 600;
+}
 /* Modal background */
 .modal {
   display: none; 
@@ -1044,6 +1088,82 @@ function applyFilters() {
 </article>
  </section>
 
+<!-- Match Card R32 -->
+ <section id="tickets" class="products-grid">
+<article 
+  class="product-card ticket-card"
+  data-match="R32 MEX"
+  data-category="mexico-city"
+>
+
+  <!-- Logos + Title -->
+  <div class="match-title" style="display:flex; align-items:center; gap:12px; font-weight:bold; color:rgb(183,233,183);">
+    <span style="
+      display:inline-block;
+      background-color:#d4af37;
+      color:rgb(22, 20, 20);
+      font-weight:bold;
+      font-size:18px;
+      padding:4px 10px; 
+      border-radius:4px;
+      margin-bottom:4px;">
+      R32
+    </span>
+
+    <img src="mexico-logo.png" alt="Mexico Logo" style="height:42px; width:auto;">
+    <span class="golden-box">MEXICO VS TBD</span>
+    <img src="26MEX logo.png" alt="26MEX logo.png" style="height:32px; width:auto;">
+  </div>
+
+<!-- Follow My Team Info -->
+<div class="venue-info" style="font-size:0.85rem; margin-top:6px;">
+  <div>🎫 Tipo de boleto: <strong>Follow My Team</strong></div>
+  <div>📌 El partido, sede y fecha se determinarán según la posición del equipo en la fase de grupos.</div>
+</div>
+
+<!-- Venue + Date -->
+<div class="venue-info" style="font-size:0.85rem; margin-top:6px;">
+  <div>4th Mexico Game</div>
+  <div>📍 Venue: To be determined</div>
+  <div style="color:rgb(121,203,250);">🗓️ TDB ⏰ 19:00</div>
+</div>
+
+  <!-- Categories -->
+<div class="ticket-row" 
+     style="display:flex; justify-content:space-between; margin-top:12px; 
+            background:#d4af37; padding:8px 12px; border-radius:6px; color:#000;">
+  <span><strong>Hospitality FMT</strong></span>
+
+<span style="margin-left:8px; font-size:0.8rem; color:#000000;" onclick="openPaymentModal2()">
+  <strong>💳 PAYMENT PLAN</strong>
+</span>
+    <span style="font-weight:bold; color:rgb(0, 0, 0);">
+      $3,900 USD
+  </span>
+</div>
+
+
+
+  <!-- WhatsApp + Stadium Map -->
+  <div style="display:flex; justify-content:space-between; align-items:center; margin-top:14px;">
+    <button 
+      class="btn-primary"
+      onclick="sendWhatsApp('M79', 'MEXICO VS TBD', 'Category 2', '2600', true)">
+      Buy Tickets
+    </button>
+
+    <img 
+      src="stadium.png" 
+      alt="Stadium Map"
+      style="height:40px; cursor:pointer;"
+      onclick="openMapModal('banorte-map.jpg')"
+    >
+  </div>
+
+</article>
+  </section>
+
+
 <!-- Match Card M79 -->
  <section id="tickets" class="products-grid">
 <article 
@@ -1063,11 +1183,11 @@ function applyFilters() {
       padding:4px 10px;
       border-radius:4px;
       margin-bottom:4px;">
-      M79/M73
+      M79
     </span>
 
-    <img src="mexico-logo.png" alt="Mexico Logo" style="height:42px; width:auto;">
-    <span class="gray-box">MEXICO VS TBD</span>
+    <img src="26MEX logo.png" alt="Mexico Logo" style="height:32px; width:auto;">
+    <span class="gray-box">1A vs 3CEFHI</span>
     <img src="26MEX logo.png" alt="26MEX logo.png" style="height:32px; width:auto;">
   </div>
 
@@ -1078,15 +1198,6 @@ function applyFilters() {
   </div>
 
   <!-- Categories -->
-<div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
-  <span>Hospitality FMT</span>
-<span style="margin-left:8px; font-size:0.8rem; color:#25d366;" onclick="openPaymentModal()">
-  💳 Payment Plan
-</span>
-    <span style="font-weight:bold; color:rgb(56, 255, 86);">
-      $3,900 USD
-  </span>
-</div>
 
   <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:6px;">
     <span>Category 1</span>
@@ -1124,8 +1235,6 @@ function applyFilters() {
 </article>
   </section>
 
-
-
 <!-- Match Card M92 -->
  <section id="tickets" class="products-grid">
 <article 
@@ -1148,7 +1257,7 @@ function applyFilters() {
       M92
     </span>
 
-    <img src="26MEX logo.png" alt="Mexico Logo" style="height:42px; width:auto;">
+    <img src="26MEX logo.png" alt="Mexico Logo" style="height:32px; width:auto;">
     <span class="gray-box">W79 VS W80</span>
     <img src="26MEX logo.png" alt="26MEX logo.png" style="height:32px; width:auto;">
   </div>
