--- a/index.html
+++ b/index.html
@@ -1070,6 +1070,38 @@ function applyFilters() {
   </div>
 
   <!-- Categories -->
+<div class="ticket-row"
+     style="display:flex; justify-content:space-between; margin-top:12px;
+            background:#d4af37; padding:8px 12px; border-radius:6px; color:#000000;">
+
+<div style="display:flex; flex-direction:column; font-size:0.85rem; margin-top:6px;">
+    <span><strong>Hospitality</strong></span>
+    <span>Pavilion Std+</span>
+</div>  
+  
+
+<span style="
+  margin-left:8px;
+  font-size:0.8rem;
+  color:#d4af37;
+  background:#0A1A3F;        /* navy button */
+  padding:6px 12px;          /* button padding */
+  border-radius:6px;         /* smooth corners */ 
+  cursor:pointer; 
+  font-weight:600;
+  display:inline-block;
+  box-shadow:0 2px 4px rgba(0,0,0,0.25); /* subtle depth */
+  transition:0.2s ease;"
+  onclick="openPaymentModal2()"
+  onmouseover="this.style.opacity='0.85'"
+  onmouseout="this.style.opacity='1'">
+  💳 Payment Plan
+</span>
+    <span style="font-weight:bold; color:rgb(0, 0, 0);">
+      $3,700 USD
+  </span>
+</div>
+
 <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
   <span>Category 1</span>
 <span style="margin-left:8px; font-size:0.8rem; color:#25d366;" onclick="openPaymentModal2()">
@@ -1155,10 +1187,15 @@ function applyFilters() {
 </div>
 
   <!-- Categories -->
-<div class="ticket-row" 
-     style="display:flex; justify-content:space-between; margin-top:12px; 
+<div class="ticket-row"
+     style="display:flex; justify-content:space-between; margin-top:12px;
             background:#d4af37; padding:8px 12px; border-radius:6px; color:#000000;">
-  <span><strong>Hospitality</strong></span>
+
+<div style="display:flex; flex-direction:column; font-size:0.85rem; margin-top:6px;">
+    <span><strong>Hospitality</strong></span>
+    <span>Pavilion Std+</span>
+</div>  
+    
 
 <span style="
   margin-left:8px;
@@ -1175,10 +1212,10 @@ function applyFilters() {
   onclick="openPaymentModal2()"
   onmouseover="this.style.opacity='0.85'"
   onmouseout="this.style.opacity='1'">
-  Until 1/15/26⏳
+  💳 Payment Plan
 </span>
     <span style="font-weight:bold; color:rgb(0, 0, 0);">
-      $3,300 USD
+      $3,500 USD
   </span>
 </div>
 
@@ -1433,7 +1470,6 @@ function applyFilters() {
 
 </body>
 </html>
-
 
 
 
