--- a/index.html
+++ b/index.html
@@ -86,11 +86,6 @@
     <div style="width:25%; background:#51ff8e; height:10px; border-radius:8px;"></div>
   </div>
 
-  📅 Enero 2026: <span style="color:#51ff8e;">15%</span><br>
-  <!-- 25% + 15% = 40% -->
-  <div style="width:100%; background:#e5e5e5; border-radius:8px; margin:4px 0;">
-    <div style="width:40%; background:#51ff8e; height:10px; border-radius:8px;"></div>
-  </div>
 
   📅 Febrero 2026: <span style="color:#51ff8e;">15%</span><br>
   <!-- 40% + 15% = 55% -->
@@ -114,6 +109,12 @@
   <!-- 85% + 15% = 100% -->
   <div style="width:100%; background:#e5e5e5; border-radius:8px; margin:4px 0;">
     <div style="width:100%; background:#51ff8e; height:10px; border-radius:8px;"></div>
+  </div>
+  
+  📅 Junio 2026: <span style="color:#51ff8e;">15%</span><br>
+  <!-- 25% + 15% = 40% -->
+  <div style="width:100%; background:#e5e5e5; border-radius:8px; margin:4px 0;">
+    <div style="width:40%; background:#51ff8e; height:10px; border-radius:8px;"></div>
   </div>
 
   🏁 Total: <span style="color:#51ff8e;">100%</span><br>
