--- a/index.html
+++ b/index.html
@@ -995,9 +995,9 @@ function applyFilters() {
     <span style="font-weight:bold;">$2,700 USD</span>
   </div>
 
-  <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:6px;">
+  <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
     <span>Category 3</span>
-    <span style="font-weight:bold;">$30,000 MXN</span>
+    <span class="soldout-box" style="color:rgb(253, 169, 169); font-weight:bold; text-transform:uppercase;">SOLD OUT</span>
   </div>
 
   <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
