--- a/index.html
+++ b/index.html
@@ -898,10 +898,21 @@ function applyFilters() {
   </div>
 
   <!-- Categories -->
+  
   <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
     <span>Category 1</span>
     <span style="margin-left:8px; font-size:0.8rem; color:#25d366;" onclick="openPaymentModal2()">
 💳 Payment Plan
+</span>
+    <span style="font-weight:bold; color:rgb(56, 255, 86);">
+      $6,500 USD
+    </span>
+      </span>
+</div>
+  <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
+    <span>Category 1</span>
+    <span style="margin-left:8px; font-size:0.8rem; color:#25d366;" onclick="openPaymentModal2()">
+Limited Time Offer
 </span>
     <span style="font-weight:bold; color:rgb(56, 255, 86);">
       $5,500 USD
