--- a/index.html
+++ b/index.html
@@ -1213,7 +1213,7 @@ function applyFilters() {
   💳 Payment Plan
 </span>
     <span style="font-weight:bold; color:rgb(0, 0, 0);">
-      $4,200 USD
+      SOLD OUT😢
   </span>
 </div>
 
