--- a/index.html
+++ b/index.html
@@ -1102,10 +1102,10 @@ function applyFilters() {
 <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
   <span>Category 1</span>
 <span style="margin-left:8px; font-size:0.8rem; color:#25d366;" onclick="openPaymentModal2()">
-  💳 Payment Plan
+  🎉SPECIAL OFFER🥳
 </span>
-    <span style="font-weight:bold; color:rgb(56, 255, 86);">
-      $3,200 USD
+    <span style="font-weight:bold; color: rgb(0, 255, 255);">
+      $3,100 USD
     </span>
 
   </span>
