--- a/index.html
+++ b/index.html
@@ -991,6 +991,7 @@ function applyFilters() {
 <span style="font-size:0.75em; color:rgb(56, 255, 86); opacity:0.8;">
   MXN $54,400
 </span>
+</div>
 
   <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
     <span>Category 2</span>
