--- a/index.html
+++ b/index.html
@@ -985,11 +985,14 @@ function applyFilters() {
     <span>Category 1</span>
     <span style="margin-left:8px; font-size:0.8rem; color:#25d366;" onclick="openPaymentModal2()">
   💳 Payment Plan
+  </span>
 <span style="font-weight:bold; color:rgb(56, 255, 86);">
   $3,200 USD
 <br>
 <span style="font-size:0.75em; color:rgb(56, 255, 86); opacity:0.8;">
   MXN $54,400
+  </span>
+  
 </div>
 
   <div class="ticket-row" style="display:flex; justify-content:space-between; margin-top:12px;">
