--- a/index.html
+++ b/index.html
@@ -989,8 +989,8 @@ function applyFilters() {
 <span style="font-weight:bold; color:rgb(56, 255, 86);">
   $3,200 USD
 <br>
-<span style="font-size:0.75em; color:rgb(56, 255, 86); opacity:0.8;">
-  MXN $54,400
+<span style="font-size:0.70em; color:rgb(56, 255, 86); opacity:0.8;">
+  $60,800 MXN
   </span>
   
 </div>
